crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@403.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create or replace function rngfuncbar(out integer, out numeric) as\n$$ select (1, 2) $$ language sql;"
---
CreateFunctionStmt@0..100
  Create@0..6 "create"
  Whitespace@6..7 " "
  Or@7..9 "or"
  Whitespace@9..10 " "
  Replace@10..17 "replace"
  Whitespace@17..18 " "
  Function@18..26 "function"
  Whitespace@26..27 " "
  Ident@27..37 "rngfuncbar"
  Ascii40@37..38 "("
  FunctionParameter@38..49
    OutP@38..41 "out"
    Whitespace@41..42 " "
    TypeName@42..49
      Integer@42..49 "integer"
  Ascii44@49..50 ","
  Whitespace@50..51 " "
  FunctionParameter@51..62
    OutP@51..54 "out"
    Whitespace@54..55 " "
    TypeName@55..62
      Numeric@55..62 "numeric"
  Ascii41@62..63 ")"
  Whitespace@63..64 " "
  DefElem@64..86
    As@64..66 "as"
    Newline@66..67 "\n"
    List@67..86
      Sconst@67..86 "$$ select (1, 2) $$"
  Whitespace@86..87 " "
  DefElem@87..99
    Language@87..95 "language"
    Whitespace@95..96 " "
    SqlP@96..99 "sql"
  Ascii59@99..100 ";"

