crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@404.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select * from rngfuncbar();
---
SelectStmt@0..27
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..24
    List@14..24
      FuncCall@14..24
        Ident@14..24 "rngfuncbar"
  Ascii40@24..25 "("
  Ascii41@25..26 ")"
  Ascii59@26..27 ";"

