crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@410.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select x from int8_tbl, extractq2(int8_tbl) f(x);"
---
SelectStmt@0..49
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      Ident@7..8 "x"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeVar@14..22
    Ident@14..22 "int8_tbl"
  Ascii44@22..23 ","
  Whitespace@23..24 " "
  RangeFunction@24..47
    List@24..42
      FuncCall@24..42
        Ident@24..33 "extractq2"
        Ascii40@33..34 "("
        ColumnRef@34..42
          Ident@34..42 "int8_tbl"
    Ascii41@42..43 ")"
    Whitespace@43..44 " "
    Alias@44..47
      Ident@44..45 "f"
      Ascii40@45..46 "("
      Ident@46..47 "x"
  Ascii41@47..48 ")"
  Ascii59@48..49 ";"

