crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@413.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select x from int8_tbl, extractq2_2(int8_tbl) f(x);"
---
SelectStmt@0..51
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      Ident@7..8 "x"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeVar@14..22
    Ident@14..22 "int8_tbl"
  Ascii44@22..23 ","
  Whitespace@23..24 " "
  RangeFunction@24..49
    List@24..44
      FuncCall@24..44
        Ident@24..35 "extractq2_2"
        Ascii40@35..36 "("
        ColumnRef@36..44
          Ident@36..44 "int8_tbl"
    Ascii41@44..45 ")"
    Whitespace@45..46 " "
    Alias@46..49
      Ident@46..47 "f"
      Ascii40@47..48 "("
      Ident@48..49 "x"
  Ascii41@49..50 ")"
  Ascii59@50..51 ";"

