crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@418.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select *, row_to_json(u) from unnest(array[(1,'foo')::rngfunc2, null::rngfunc2]) u;"
---
SelectStmt@0..83
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Ascii44@8..9 ","
  Whitespace@9..10 " "
  ResTarget@10..23
    FuncCall@10..23
      Ident@10..21 "row_to_json"
      Ascii40@21..22 "("
      ColumnRef@22..23
        Ident@22..23 "u"
  Ascii41@23..24 ")"
  Whitespace@24..25 " "
  From@25..29 "from"
  Whitespace@29..30 " "
  RangeFunction@30..82
    List@30..78
      FuncCall@30..78
        Ident@30..36 "unnest"
        Ascii40@36..37 "("
        AArrayExpr@37..78
          Array@37..42 "array"
          Ascii91@42..43 "["
          TypeCast@43..62
            RowExpr@43..51
              Ascii40@43..44 "("
              AConst@44..45
                Iconst@44..45 "1"
              Ascii44@45..46 ","
              AConst@46..51
                Sconst@46..51 "'foo'"
            Ascii41@51..52 ")"
            Typecast@52..54 "::"
            TypeName@54..62
              Ident@54..62 "rngfunc2"
          Ascii44@62..63 ","
          Whitespace@63..64 " "
          TypeCast@64..78
            AConst@64..68
              NullP@64..68 "null"
            Typecast@68..70 "::"
            TypeName@70..78
              Ident@70..78 "rngfunc2"
    Ascii93@78..79 "]"
    Ascii41@79..80 ")"
    Whitespace@80..81 " "
    Alias@81..82
      Ident@81..82 "u"
  Ascii59@82..83 ";"

