crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@419.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select *, row_to_json(u) from unnest(array[null::rngfunc2, null::rngfunc2]) u;"
---
SelectStmt@0..78
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Ascii44@8..9 ","
  Whitespace@9..10 " "
  ResTarget@10..23
    FuncCall@10..23
      Ident@10..21 "row_to_json"
      Ascii40@21..22 "("
      ColumnRef@22..23
        Ident@22..23 "u"
  Ascii41@23..24 ")"
  Whitespace@24..25 " "
  From@25..29 "from"
  Whitespace@29..30 " "
  RangeFunction@30..77
    List@30..73
      FuncCall@30..73
        Ident@30..36 "unnest"
        Ascii40@36..37 "("
        AArrayExpr@37..73
          Array@37..42 "array"
          Ascii91@42..43 "["
          TypeCast@43..57
            AConst@43..47
              NullP@43..47 "null"
            Typecast@47..49 "::"
            TypeName@49..57
              Ident@49..57 "rngfunc2"
          Ascii44@57..58 ","
          Whitespace@58..59 " "
          TypeCast@59..73
            AConst@59..63
              NullP@59..63 "null"
            Typecast@63..65 "::"
            TypeName@65..73
              Ident@65..73 "rngfunc2"
    Ascii93@73..74 "]"
    Ascii41@74..75 ")"
    Whitespace@75..76 " "
    Alias@76..77
      Ident@76..77 "u"
  Ascii59@77..78 ";"

