crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@421.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select *, row_to_json(u) from unnest(array[]::rngfunc2[]) u;"
---
SelectStmt@0..60
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Ascii44@8..9 ","
  Whitespace@9..10 " "
  ResTarget@10..23
    FuncCall@10..23
      Ident@10..21 "row_to_json"
      Ascii40@21..22 "("
      ColumnRef@22..23
        Ident@22..23 "u"
  Ascii41@23..24 ")"
  Whitespace@24..25 " "
  From@25..29 "from"
  Whitespace@29..30 " "
  RangeFunction@30..59
    List@30..54
      FuncCall@30..54
        Ident@30..36 "unnest"
        Ascii40@36..37 "("
        TypeCast@37..54
          AArrayExpr@37..42
            Array@37..42 "array"
          Ascii91@42..43 "["
          Ascii93@43..44 "]"
          Typecast@44..46 "::"
          TypeName@46..54
            Ident@46..54 "rngfunc2"
    Ascii91@54..55 "["
    Ascii93@55..56 "]"
    Ascii41@56..57 ")"
    Whitespace@57..58 " "
    Alias@58..59
      Ident@58..59 "u"
  Ascii59@59..60 ";"

