crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@424.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from\n  (select jsonb_path_query_array(module->'lectures', '$[*]') as lecture\n   from unnest(array['{\"lectures\": [{\"id\": \"1\"}]}'::jsonb])\n        as unnested_modules(module)) as ss,\n  jsonb_to_recordset(ss.lecture) as j (id text);"
---
SelectStmt@0..238
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Newline@13..14 "\n"
  Whitespace@14..16 "  "
  Ascii40@16..17 "("
  RangeSubselect@17..188
    SelectStmt@17..180
      Select@17..23 "select"
      Whitespace@23..24 " "
      ResTarget@24..85
        FuncCall@24..73
          Ident@24..46 "jsonb_path_query_array"
          Ascii40@46..47 "("
          AExpr@47..65
            ColumnRef@47..53
              Ident@47..53 "module"
            Op@53..55 "->"
            AConst@55..65
              Sconst@55..65 "'lectures'"
          Ascii44@65..66 ","
          Whitespace@66..67 " "
          AConst@67..73
            Sconst@67..73 "'$[*]'"
        Ascii41@73..74 ")"
        Whitespace@74..75 " "
        As@75..77 "as"
        Whitespace@77..78 " "
        Ident@78..85 "lecture"
      Newline@85..86 "\n"
      Whitespace@86..89 "   "
      From@89..93 "from"
      Whitespace@93..94 " "
      RangeFunction@94..180
        List@94..143
          FuncCall@94..143
            Ident@94..100 "unnest"
            Ascii40@100..101 "("
            AArrayExpr@101..143
              Array@101..106 "array"
              Ascii91@106..107 "["
              TypeCast@107..143
                AConst@107..136
                  Sconst@107..136 "'{\"lectures\": [{\"id\": ..."
                Typecast@136..138 "::"
                TypeName@138..143
                  Ident@138..143 "jsonb"
        Ascii93@143..144 "]"
        Ascii41@144..145 ")"
        Newline@145..146 "\n"
        Whitespace@146..154 "        "
        Alias@154..180
          As@154..156 "as"
          Whitespace@156..157 " "
          Ident@157..173 "unnested_modules"
          Ascii40@173..174 "("
          Ident@174..180 "module"
    Ascii41@180..181 ")"
    Ascii41@181..182 ")"
    Whitespace@182..183 " "
    Alias@183..188
      As@183..185 "as"
      Whitespace@185..186 " "
      Ident@186..188 "ss"
  Ascii44@188..189 ","
  Newline@189..190 "\n"
  Whitespace@190..192 "  "
  RangeFunction@192..236
    List@192..221
      FuncCall@192..221
        Ident@192..210 "jsonb_to_recordset"
        Ascii40@210..211 "("
        ColumnRef@211..221
          Ident@211..213 "ss"
          Ascii46@213..214 "."
          Ident@214..221 "lecture"
    Ascii41@221..222 ")"
    Whitespace@222..223 " "
    Alias@223..227
      As@223..225 "as"
      Whitespace@225..226 " "
      Ident@226..227 "j"
    Whitespace@227..228 " "
    Ascii40@228..229 "("
    ColumnDef@229..236
      Ident@229..231 "id"
      Whitespace@231..232 " "
      TypeName@232..236
        TextP@232..236 "text"
  Ascii41@236..237 ")"
  Ascii59@237..238 ";"

