crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@5.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE FUNCTION rngfunct(int) returns setof rngfunc2 as 'SELECT * FROM rngfunc2 WHERE rngfuncid = $1 ORDER BY f2;' LANGUAGE SQL;"
---
CreateFunctionStmt@0..128
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Function@7..15 "FUNCTION"
  Whitespace@15..16 " "
  Ident@16..24 "rngfunct"
  Ascii40@24..25 "("
  FunctionParameter@25..28
    TypeName@25..28
      IntP@25..28 "int"
  Ascii41@28..29 ")"
  Whitespace@29..30 " "
  Returns@30..37 "returns"
  Whitespace@37..38 " "
  Setof@38..43 "setof"
  Whitespace@43..44 " "
  TypeName@44..52
    Ident@44..52 "rngfunc2"
  Whitespace@52..53 " "
  DefElem@53..114
    As@53..55 "as"
    Whitespace@55..56 " "
    List@56..114
      Sconst@56..114 "'SELECT * FROM rngfun ..."
  Whitespace@114..115 " "
  DefElem@115..127
    Language@115..123 "LANGUAGE"
    Whitespace@123..124 " "
    SqlP@124..127 "SQL"
  Ascii59@127..128 ";"

